# compute-shader-skeleton

./: Cargo.toml
src/: ariels_version.rs  main.rs  main_ariel.rs  main_max.rs  minimal.rs  not_inplace_add.wgsl  repeatable.rs  shader.wgsl  shader2.wgsl
src/shaders/: separate_buff_add.wgsl
